--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     xmlns:th="http://www.thymeleaf.org"
-    layout:decorator="'layout/LayoutPadrao'">
+    layout:decorate="~{layout/LayoutPadrao}"
+    xmlns:agr="http://agr.go.gov.br">
 
 <head>
     <title>Cadastro de usuário</title>
@@ -20,34 +21,37 @@
     </div>
     
     <div class="container-fluid">
-        <form>
+        <form method="POST" th:object="${usuario}">
+            <agr:message/>
+            
             <div class="row">
-                <div class="form-group  col-sm-12">
-                    <label for="nome">Nome</label>
-                    <input type="text" class="form-control" id="nome" autofocus="autofocus"/>
+                <div class="form-group  col-sm-12  agr-required" agr:classforerror="nome">
+                    <label for="nome" class="control-label">Nome</label>
+                    <input type="text" class="form-control" id="nome" autofocus="autofocus" th:field="*{nome}"/>
                 </div>
             </div>
                 
             <div class="row">
-                <div class="form-group  col-sm-6">
-                    <label for="email">E-mail</label>
-                    <input type="text" class="form-control" id="email"/>
+                <div class="form-group  col-sm-6  agr-required" agr:classforerror="email">
+                    <label for="email" class="control-label">E-mail</label>
+                    <input type="text" class="form-control" id="email" th:field="*{email}"/>
                 </div>
+                
                 <div class="form-group  col-sm-3">
-                    <label for="dataNascimento">Data de nascimento</label>
-                    <input type="text" class="form-control" id="dataNascimento"/>
+                    <label for="dataNascimento" class="control-label">Data de nascimento</label>
+                    <input type="text" class="form-control js-date" id="dataNascimento" th:field="*{dataNascimento}" autocomplete="off" onchange="testeData();"/>
                 </div>
             </div>
             
-            <div class="row">
-                <div class="form-group  col-sm-3">
-                    <label for="senha">Senha</label> 
-                    <input type="password" class="form-control" id="senha"/>
+            <div class="row" >
+                <div class="form-group  col-sm-3" agr:classforerror="senha">
+                    <label for="senha" class="control-label">Senha</label> 
+                    <input type="password" class="form-control" id="senha" th:field="*{senha}"/>
                 </div>
                 
-                <div class="form-group  col-sm-3">
-                    <label for="confirmacaoSenha">Confirmação de senha</label> 
-                    <input type="password" class="form-control" id="confirmacaoSenha"/>
+                <div class="form-group  col-sm-3" agr:classforerror="confirmacaoSenha">
+                    <label for="confirmacaoSenha" class="control-label">Confirmação de senha</label> 
+                    <input type="password" class="form-control" id="confirmacaoSenha" th:field="*{confirmacaoSenha}"/>
                 </div>
                 
                 <div class="form-group  col-sm-3">
@@ -61,7 +65,7 @@
             </div>
             
             <div class="row">
-                <div class="form-group  col-sm-6">
+                <div class="form-group  col-sm-6  agr-required" agr:classforerror="grupos">
                     <label class="control-label">Grupos</label> 
                     <div>
                         <div class="checkbox  checkbox-inline"> 
@@ -79,14 +83,13 @@
             <button type="submit" class="btn  btn-primary">Salvar</button>
         </form>
     </div>
-
 </section>
 
 <th:block layout:fragment="javascript-extra">
     <script th:src="@{/javascripts/vendors/bootstrap-switch.min.js}"></script>
+    <script th:src="@{/javascripts/usuario.teste-data.js}"></script>
     <script>
         $('.js-status').bootstrapSwitch();
     </script>
 </th:block>
-
 </html>
