--- a/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -31,7 +31,7 @@
 
     <div class="container-fluid">
 
-        <form method="POST" th:object="${cerveja}" class="form-vertical  js-form-loading">
+        <form method="POST" th:object="${cerveja}" class="form-vertical  js-form-loading" th:action="@{/cerveja/novo}">
             <agr:message/>
     
             <div class="row">
