--- a/src/main/resources/templates/cidade/CadastroCidade.html
+++ b/src/main/resources/templates/cidade/CadastroCidade.html
@@ -13,11 +13,11 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-10">
+            <div class="col-xs-10">
                 <h1>Cadastro de Cidade</h1>
             </div>
             
-            <div class="col-sm-2">
+            <div class="col-xs-2">
                 <div class="aw-page-header-controls">
                     <a class="btn  btn-default" th:href="@{/cidades/}">
                         <i class="glyphicon  glyphicon-search"></i> <span class="hidden-xs  hidden-sm">Pesquisar</span>
