--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -21,7 +21,7 @@
     </div>
     
     <div class="container-fluid">
-        <form method="POST" th:object="${usuario}">
+        <form method="POST" th:object="${usuario}" th:action="@{/usuarios/novo}">
             <agr:message/>
             
             <div class="row">
@@ -44,7 +44,7 @@
             </div>
             
             <div class="row" >
-                <div class="form-group  col-sm-3" agr:classforerror="senha">
+                <div class="form-group  col-sm-3" agr:classforerror="senha" th:classappend="${usuario.novo} ? agr-required">
                     <label for="senha" class="control-label">Senha</label> 
                     <input type="password" class="form-control" id="senha" th:field="*{senha}"/>
                 </div>
@@ -58,7 +58,7 @@
                     <label class="control-label">Status</label>
                     <div>
                         <input type="checkbox" class="js-status" data-size="small" data-off-color="danger" 
-                            data-on-text="Ativo" data-off-text="Inativo"/>
+                            data-on-text="Ativo" data-off-text="Inativo" th:field="*{ativo}"/>
                     </div>
                 </div>
                 
@@ -68,14 +68,12 @@
                 <div class="form-group  col-sm-6  agr-required" agr:classforerror="grupos">
                     <label class="control-label">Grupos</label> 
                     <div>
-                        <div class="checkbox  checkbox-inline"> 
-                            <input type="checkbox" />
-                            <label>Administrador</label>
-                        </div>
-                        <div class="checkbox  checkbox-inline"> 
-                            <input type="checkbox" />
-                            <label>Vendedor</label>
-                        </div>
+                        <th:block th:each="grupo : ${grupos}">
+	                        <div class="checkbox  checkbox-inline"> 
+	                            <input type="checkbox" th:value="${grupo.codigo}" th:field="*{grupos}" />
+	                            <label th:for="${#ids.prev('grupos')}" th:text="${grupo.nome}" ></label>
+	                        </div>
+                        </th:block>
                     </div>
                 </div>
             </div>
