--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -12,11 +12,19 @@
 
 <section layout:fragment="conteudo">
 
-    <div class="page-header">
-        <div class="container-fluid">
-            <h1>
-                Cadastro de usuário
-            </h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-10">
+                <h1>Cadastro de Usuário</h1>
+            </div>
+            
+            <div class="col-xs-2">
+                <div class="aw-page-header-controls">
+                    <a class="btn  btn-default" th:href="@{/usuarios/}">
+                        <i class="glyphicon  glyphicon-search"></i> <span class="hidden-xs  hidden-sm">Pesquisar</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     
