--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -45,7 +45,7 @@
                     <input type="text" class="form-control" id="email" th:field="*{email}"/>
                 </div>
                 
-                <div class="form-group  col-sm-3">
+                <div class="form-group  col-sm-3 agr-required" agr:classforerror="dataNascimento">
                     <label for="dataNascimento" class="control-label">Data de nascimento</label>
                     <input type="text" class="form-control js-date" id="dataNascimento" th:field="*{dataNascimento}" autocomplete="off" onchange="testeData();"/>
                 </div>
