--- a/src/main/resources/templates/usuario/PesquisaUsuarios.html
+++ b/src/main/resources/templates/usuario/PesquisaUsuarios.html
@@ -3,7 +3,7 @@
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="~{layout/LayoutPadrao}"
-    xmlns:brewer="http://brewer.algaworks.com"
+    xmlns:agr="http://agr.go.gov.br"
     xmlns:data="http://www.thymeleaf.org/extras/data"
     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     
@@ -61,23 +61,63 @@
             
             <button type="submit" class="btn  btn-primary">Pesquisar</button>
         </form>
+        
+        <div class="aw-datatable-toolbar" >
+            <button class="btn btn-default  btn-xs  js-status-btn  disabled" data:status="ATIVAR" data:url="@{/usuarios/status}" data-toggle="tooltip" title="Ativar">
+                <span>Ativar</span>
+            </button>
+            
+            <button class="btn btn-default  btn-xs  js-status-btn  disabled" data:status="DESATIVAR" data:url="@{/usuarios/status}" data-toggle="tooltip" title="Desativar">
+                <span>Desativar</span>
+            </button>
+        </div>
 
         <div class="table-responsive  bw-tabela-simples">
             <table class="table  table-hover">
                 <thead>
                     <tr>
+                        <th class="table-usuarios-col-status">
+                            <div class="checkbox  aw-checkbox-no-margin">
+                                <input type="checkbox" class="js-selecao-todos"/>
+                                <label></label>
+                            </div>
+                        </th>
                         <th>Nome</th>
                         <th>E-mail</th>
+                        <th>Grupo</th>
+                        <th>Grupo Plus</th>
                         <th>Status</th>
                         <th class="table-col-acoes"></th>
                     </tr>
                 </thead>
             
                 <tbody>
-                    <tr th:each="usuario : ${usuarios}">
+                    <tr th:each="usuario : ${pagina.conteudo}">
+                        <td>
+                            <div class="checkbox  aw-checkbox-no-margin" th:if="${#authentication.principal.usuario.codigo != usuario.codigo}">
+                                <input type="checkbox" class="js-selecao" data:codigo="${usuario.codigo}">
+                                <label></label>
+                            </div>
+                        </td>
                         <td th:text="${usuario.nome}"></td>
                         <td th:text="${usuario.email}"></td>
-                        <td th:text="${usuario.ativo} ? Ativo : Inativo"></td>
+                        <td>
+                            <span th:each="grupo : ${usuario.grupos}" th:text="|${grupo.nome}${grupoStat.last ? '' : ', '}|"></span>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-default btn-grupo" aria-label="Left Align" data-toggle="modal" 
+                                data-target="#modalGrupo" onclick="verStatusPlus(event);" data:codigo="${usuario.codigo}" >
+                              <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>                        
+                        </td>                        
+                        <td>
+                            <th:block th:if="${usuario.ativo}">
+                                <span class="label  label-success">Ativo</span>
+                            </th:block>
+                            <th:block th:if="${not usuario.ativo}">
+                                <span class="label  label-danger">Inativo</span>
+                            </th:block>
+                        </td>
                         <td class="text-center">
                             <a class="btn  btn-link  btn-xs" title="Editar"> 
                                 <i class="glyphicon glyphicon-pencil"></i>
@@ -88,13 +128,18 @@
                         </td>
                     </tr>
                     
-                    <tr th:if="${usuarios.empty}">
-                        <td colspan="4">Nenhum usuário encontrado</td>
+                    <tr th:if="${pagina.vazia}">
+                        <td colspan="6">Nenhum usuário encontrado</td>
                     </tr>
                  </tbody>
             </table>
          </div>
+         <agr:pagination page="${pagina}" />
     </div>
+   <div th:replace="usuario/ViewGrupos :: modal"></div>
 </section>
+<th:block layout:fragment="javascript-extra">
+    <script th:src="@{/javascripts/multiselecao.js}"></script>
+</th:block>
 </body>
 </html>
