--- a/src/main/resources/static/stylesheets/brewer.css
+++ b/src/main/resources/static/stylesheets/brewer.css
@@ -129,3 +129,18 @@
 	width: 30px;
 	text-align: center;
 }
+
+.bw-tabela-cervejas {
+    margin-bottom: 15px;
+}
+
+.bw-tabela-cervejas__vazio {
+    padding: 15px 15px;
+    
+    border: 1px dashed #ddd;
+    
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: 300;
+    color: #555;
+}
