--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -47,7 +47,7 @@
                 
                 <div class="form-group  col-sm-3 agr-required" agr:classforerror="dataNascimento">
                     <label for="dataNascimento" class="control-label">Data de nascimento</label>
-                    <input type="text" class="form-control js-date" id="dataNascimento" th:field="*{dataNascimento}" autocomplete="off" onchange="testeData();"/>
+                    <input type="text" class="form-control js-date dataInput" id="dataNascimento" th:field="*{dataNascimento}" autocomplete="off" />
                 </div>
             </div>
             
