--- a/src/main/resources/templates/venda/CadastroVenda.html
+++ b/src/main/resources/templates/venda/CadastroVenda.html
@@ -3,10 +3,14 @@
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="~{layout/LayoutPadrao}"
+    xmlns:data="http://www.thymeleaf.org/extras/data"
     xmlns:agr="http://agr.go.gov.br">
 
 <head>
     <title>Cadastro de venda</title>
+    
+    <link rel="stylesheet" th:href="@{/stylesheets/vendors/easy-autocomplete.min.css}"/>
+    <link rel="stylesheet" th:href="@{/stylesheets/vendors/easy-autocomplete.themes.min.css}"/>
 </head>
 
 <section layout:fragment="conteudo">
@@ -63,7 +67,7 @@
                     <label class="control-label" for="nomeCliente">Cliente</label>
                     <div class="input-group">
                       <input id="nomeCliente" type="text" readonly="readonly" class="form-control" placeholder="Clique na lupa para pesquisar o cliente"/>
-                      <input id="codigoCliente" type="hidden"></input>
+                      <input id="codigoCliente" type="hidden"/>
                       <span class="input-group-btn">
                         <button class="btn  btn-default  js-tooltip" type="button" title="Pesquisa avançada"
                                 data-toggle="modal" data-target="#pesquisaRapidaClientes" >
@@ -104,16 +108,16 @@
 
                     <div class="row">
                         <div class="form-group  col-lg-12">
-                            <input type="text" class="form-control" id="cerveja" 
-                                placeholder="Pesquise e adicione a cerveja pelo SKU ou nome" autofocus="autofocus" />
+                            <input type="text" class="form-control  js-sku-nome-cerveja-input" id="cerveja" 
+                                placeholder="Pesquise e adicione a cerveja pelo SKU ou nome" autofocus="autofocus" data:url=@{/cervejas} />
                         </div>
                     </div>
                     
-                    <div class="bw-tabela-cervejas">
-                        <div class="bw-tabela-cervejas__vazio">
-                            <i class="glyphicon  glyphicon-shopping-cart"></i> 
-                            <span>Você ainda não adicionou nenhuma cerveja.</span>
-                        </div>
+                    <div class="bw-tabela-cervejas js-tabela-cervejas-container">
+	                     <div class="bw-tabela-cervejas__vazio">
+	                         <i class="glyphicon  glyphicon-shopping-cart"></i> 
+	                         <span>Você ainda não adicionou nenhuma cerveja.</span>
+	                     </div>
                     </div>
                 </div>
                 
@@ -158,20 +162,25 @@
             </div>
         </form>
     </div>
+    
     <th:block th:replace="cliente/PesquisaRapidaClientes :: pesquisaRapidaClientes"></th:block>
+    <th:block th:replace="hbs/TemplateAutocompleteCerveja"></th:block>
 </section>
 
 <th:block layout:fragment="javascript-extra">
+    <script th:src="@{/javascripts/vendors/jquery.easy-autocomplete.min.js}"></script>
     <script th:src="@{/javascripts/vendors/handlebars.min.js}"></script>
     <script th:src="@{/javascripts/cliente.pesquisa-rapida.js}"></script>
-	<script>
-	$(function() {
-	    $('.js-abas-venda a').click(function (e) {
-	        e.preventDefault();
-	        $(this).tab('show');
-	    });
-	});
-	</script>
+    <script th:src="@{/javascripts/venda.autocomplete-itens.js}"></script>
+    <script th:src="@{/javascripts/venda.tabela-itens.js}"></script>
+    <script>
+    $(function() {
+        $('.js-abas-venda a').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        });
+    });
+    </script>
 </th:block>
 
 </html>
