--- a/src/main/resources/templates/venda/CadastroVenda.html
+++ b/src/main/resources/templates/venda/CadastroVenda.html
@@ -27,7 +27,7 @@
     
     <div class="container-fluid">
         <form method="POST" th:action="@{/vendas/nova}">
-            
+            <input type="hidden" id="uuid" th:value="${uuid}"/>    
             <div class="row">
                 <div class="col-sm-4">
                     <div class="aw-box">
@@ -63,7 +63,7 @@
             </div>
 
             <div class="row">
-                <div class="form-group  col-sm-4  bw-required">
+                <div class="form-group  col-sm-4  agr-required">
                     <label class="control-label" for="nomeCliente">Cliente</label>
                     <div class="input-group">
                       <input id="nomeCliente" type="text" readonly="readonly" class="form-control" placeholder="Clique na lupa para pesquisar o cliente"/>
@@ -173,6 +173,7 @@
     <script th:src="@{/javascripts/cliente.pesquisa-rapida.js}"></script>
     <script th:src="@{/javascripts/venda.autocomplete-itens.js}"></script>
     <script th:src="@{/javascripts/venda.tabela-itens.js}"></script>
+    <script th:src="@{/javascripts/venda.js}"></script>    
     <script>
     $(function() {
         $('.js-abas-venda a').click(function (e) {
