--- a/src/main/resources/static/stylesheets/brewer.css
+++ b/src/main/resources/static/stylesheets/brewer.css
@@ -312,6 +312,12 @@
     color: red;
 }
 
+.has-error .input-group-btn .btn.btn-default {
+    color: #a94442;
+    border-color: #a94442;
+    background-color: #f2dede;
+}
+
 @media (min-width: 768px) { /* screen-sm-min */
     .bw-tabela-item__painel-exclusao {
         width: 40%;
