--- a/src/main/resources/templates/venda/CadastroVenda.html
+++ b/src/main/resources/templates/venda/CadastroVenda.html
@@ -26,7 +26,7 @@
     </div>
     
     <div class="container-fluid">
-        <form method="POST" th:action="@{/vendas/nova}" th:object="${venda}">
+        <form method="POST" th:action="@{/vendas/nova}" th:object="${venda}" class="js-formulario-principal">
             <agr:message/>
         
             <input type="hidden" id="uuid" th:field="*{uuid}"/>
@@ -37,7 +37,7 @@
                         <div class="aw-box__icon">
                             <i class="fa  fa-usd  fa-3x"></i>
                         </div>
-                        <div class="aw-box__value">R$<span class="js-valor-total-box">0,00</span></div>
+                        <div class="aw-box__value">R$<span class="js-valor-total-box" th:text="${{venda.valorTotal}}">0,00</span></div>
                         <div class="aw-box__title">Total</div>
                     </div>
                 </div>
@@ -66,14 +66,15 @@
             </div>
 
             <div class="row">
-                <div class="form-group  col-sm-4  bw-required">
+                <div class="form-group  col-sm-4  bw-required" agr:classforerror="cliente.codigo">
                     <label class="control-label" for="nomeCliente">Cliente</label>
                     <div class="input-group">
-                      <input id="nomeCliente" type="text" readonly="readonly" class="form-control" placeholder="Clique na lupa para pesquisar o cliente"/>
+                      <input id="nomeCliente" type="text" readonly="readonly" class="form-control" th:field="*{cliente.nome}"
+                        placeholder="Clique na lupa para pesquisar o cliente"/>
                       <input id="codigoCliente" type="hidden" th:field="*{cliente}"/>
                       <span class="input-group-btn">
-                        <button class="btn  btn-default  js-tooltip" type="button" title="Pesquisa avançada"
-                                data-toggle="modal" data-target="#pesquisaRapidaClientes" >
+                        <button class="btn  btn-default js-tooltip" type="button" title="Pesquisa avançada"
+                                data-toggle="modal" data-target="#pesquisaRapidaClientes">
                             <i class="glyphicon  glyphicon-search"></i>
                         </button>
                       </span>
@@ -84,7 +85,7 @@
                     <label class="control-label" for="valorFrete">Valor do frete</label>
                     <div class="input-group">
                         <div class="input-group-addon">R$</div> 
-                        <input type="text" maxlength="14" class="form-control  js-decimal" id="valorFrete" th:field="*{valorFrete}"/>
+                        <input type="text" maxlength="14" class="form-control  js-decimal" id="valorFrete" th:field="*{valorFrete}" data:valor="${valorFrete}"/>
                     </div>
                 </div>
                 
@@ -92,7 +93,7 @@
                     <label class="control-label" for="valorDesconto">Valor do desconto</label>
                     <div class="input-group">
                         <div class="input-group-addon">R$</div> 
-                        <input type="text" maxlength="14" class="form-control  js-decimal" id="valorDesconto" th:field="*{valorDesconto}"/>
+                        <input type="text" maxlength="14" class="form-control  js-decimal" id="valorDesconto" th:field="*{valorDesconto}" data:valor="${valorDesconto}"/>
                     </div>
                 </div>
             </div>
@@ -117,17 +118,20 @@
                         </div>
                     </div>
                     
-                    <div class="bw-tabela-cervejas  js-tabela-cervejas-container">
+                    <div class="bw-tabela-cervejas  js-tabela-cervejas-container" data:valor="${valorTotalItens}">
+                    <!-- 
                         <div class="bw-tabela-cervejas__vazio">
                             <i class="glyphicon  glyphicon-shopping-cart"></i> 
                             <span>Você ainda não adicionou nenhuma cerveja.</span>
                         </div>
+                     -->
+                     <th:block th:replace="venda/TabelaItensVenda"/>
                     </div>
                 </div>
                 
                 <div class="tab-pane" id="entrega">
                     <div class="row">
-                        <div class="form-group  col-sm-3">
+                        <div class="form-group  col-sm-3" agr:classforerror="dataEntrega">
                             <label class="control-label" for="dataEntrega">Data da entrega</label>
                             <input type="text" class="form-control" id="dataEntrega" th:field="*{dataEntrega}"/>
                         </div>
@@ -150,14 +154,14 @@
             <div class="row" style="clear: both">
                 <div class="col-lg-12">
                     <div class="btn-group">
-                      <button type="submit" class="btn  btn-primary">Salvar</button>
-                      <button type="button" class="btn  btn-primary  dropdown-toggle" data-toggle="dropdown">
+                      <button type="submit" class="btn  btn-primary js-submit-btn" data:acao="salvar" >Salvar</button>
+                      <button type="button" class="btn  btn-primary  dropdown-toggle"  data-toggle="dropdown">
                         <span class="caret"></span>
                       </button>
                       
                       <ul class="dropdown-menu">
-                        <li><a href="#">Salvar e emitir</a></li>
-                        <li><a href="#">Salvar e enviar por e-mail</a></li>
+                        <li><a href="#" class="js-submit-btn" data:acao="emitir">Salvar e emitir</a></li>
+                        <li><a href="#" class="js-submit-btn" data:acao="enviarEmail">Salvar e enviar por e-mail</a></li>
                       </ul>
                     </div>
                 
@@ -178,6 +182,7 @@
     <script th:src="@{/javascripts/venda.autocomplete-itens.js}"></script>
     <script th:src="@{/javascripts/venda.tabela-itens.js}"></script>
     <script th:src="@{/javascripts/venda.js}"></script>
+    <script th:src="@{/javascripts/venda.botoes-submit.js}"></script>
     <script>
     $(function() {
         $('.js-abas-venda a').click(function (e) {
